// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle Renders Toggle checked 1`] = `
<div>
  <div
    class="c-igMNBK"
  >
    <label
      for="checkbox"
    >
      Use word list
    </label>
    <input
      checked=""
      id="checkbox"
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Toggle Renders Toggle unchecked 1`] = `
<div>
  <div
    class="c-igMNBK"
  >
    <label
      for="checkbox"
    >
      Use word list
    </label>
    <input
      id="checkbox"
      type="checkbox"
    />
  </div>
</div>
`;
